syntax = "proto3";

package merlin.transformer;

import "transformer/spec/common.proto";

option go_package = "github.com/gojek/merlin/pkg/transformer/spec";

message JsonOutput {
  JsonTemplate jsonTemplate = 1;
}

message JsonTemplate {
  BaseJson baseJson = 1;
  map <string, Field>  fields = 2;
}

message BaseJson {
  string jsonPath = 1;
}

message Field {
  map <string, Field>  fields = 1;
  oneof value {
    FromJson fromJson = 2;
    FromTable fromTable = 3;
    string expression = 4;
  }
}

enum JsonType {
  INVALID = 0;
  RAW_REQUEST = 1;
  MODEL_RESPONSE = 2;
}